# GoodMorningUserbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.py  docker-compose.yaml  flake.nix  goodmorninguserbot.py  login.py  pyproject.toml  requirements.txt  userbot.py
service/: good-morning-userbot.service  launch.sh
userbot/: __init__.py  __main__.py  config.example.py
