[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "goodmorninguserbot"
description = "Доброе утро!"
version = "1.0.0"
requires-python = "~=3.11"
dependencies = ["pyrogram~=2.0.27", "tgcrypto~=1.2.3"]

[tool.setuptools]
py-modules = ["goodmorninguserbot"]

[project.scripts]
goodmorninguserbot = "goodmorninguserbot:main"
